# CalcTUI

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  calculator.hpp  main.cpp
